--- a/Konferencja/Content/Site.css
+++ b/Konferencja/Content/Site.css
@@ -182,3 +182,15 @@ border-radius: 5px;
     width: 24px;
     height: 24px;
 }
+
+.row.vdivide [class*='col-']:not(:last-child):after {
+  background: #e0e0e0;
+  width: 1px;
+  content: "";
+  display:block;
+  position: absolute;
+  top:0;
+  bottom: 0;
+  right: 0;
+  min-height: 70px;
+}
