--- a/Konferencja/Views/Publications/Index.cshtml
+++ b/Konferencja/Views/Publications/Index.cshtml
@@ -12,7 +12,7 @@
 <table class="table table-hover">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Conference.Theme)
+            @Html.DisplayName("Konferencja")
         </th>
         <th>
             @Html.DisplayNameFor(model => model.ApplicationUser)
