Możliwe dodawanie nowych recenzji przez admina z poziomu edycji publikacji

--- a/Konferencja/Views/Conferences/Index.cshtml
+++ b/Konferencja/Views/Conferences/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Konferencja.Models.Conference>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Lista";
 }
 
 <h2>Indeks</h2>
