--- a/Konferencja/Views/Publications/Create.cshtml
+++ b/Konferencja/Views/Publications/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Konferencja.Models.Publication
 
 @{
-    ViewBag.Title = "Stwórz";
+    ViewBag.Title = "Stwórz publikację";
 }
 
 <h2>Stwórz</h2>
@@ -49,7 +49,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Stwórz" class="btn btn-default" />
             </div>
         </div>
     </div>
