--- a/Konferencja/Views/Reviewers/Delete.cshtml
+++ b/Konferencja/Views/Reviewers/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Konferencja.Models.Reviewer
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Usuwanie";
 }
 
-<h2>Delete</h2>
+<h2>Usuń</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Jesteś pewien, że chcesz usunąć ten element?</h3>
 <div>
     <h4>Reviewer</h4>
     <hr />
@@ -73,8 +73,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Usuń" class="btn btn-warning" /> |
+            @Html.ActionLink("Powrót do listy", "Index")
         </div>
     }
 </div>
