--- a/Konferencja/Views/Reviewers/Details.cshtml
+++ b/Konferencja/Views/Reviewers/Details.cshtml
@@ -35,5 +35,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Powrót do listy", "Index")
 </p>
