--- a/Konferencja/Views/Reviewers/Index.cshtml
+++ b/Konferencja/Views/Reviewers/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<Konferencja.Models.Reviewer>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Lista";
 }
 
-<h2>Index</h2>
+<h2>Lista</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Stwórz nowy element", "Create")
 </p>
 <table class="table">
     <tr>
@@ -50,9 +50,9 @@
             }
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Edycja", "Edit", new { id=item.ID }) |
+            @Html.ActionLink("Szczegóły", "Details", new { id=item.ID }) |
+            @Html.ActionLink("Usuwanie", "Delete", new { id=item.ID })
         </td>
     </tr>
 }
