--- a/Konferencja/Views/Reviews/Delete.cshtml
+++ b/Konferencja/Views/Reviews/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model Konferencja.Models.Review
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Usuwanie ";
 }
 
-<h2>Delete</h2>
+<h2>Usuń</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Jesteś pewien, że chcesz usunąć ten element?</h3>
 <div>
-    <h4>Review</h4>
+    <h4>Recenzja</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -57,8 +57,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Usuń" class="btn btn-warning" /> |
+            @Html.ActionLink("Powrót do listy", "Index")
         </div>
     }
 </div>
