Revert "Możliwe dodawanie nowych recenzji przez admina z poziomu edycji publikacji"
This reverts commit fbe96bad716b0faff6d8abecafeb4c3dd0903806.

--- a/Konferencja/Views/Conferences/Index.cshtml
+++ b/Konferencja/Views/Conferences/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Konferencja.Models.Conference>
 
 @{
-    ViewBag.Title = "Lista";
+    ViewBag.Title = "Index";
 }
 
 <h2>Indeks</h2>
