--- a/Konferencja/Views/Reviews/Index.cshtml
+++ b/Konferencja/Views/Reviews/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<Konferencja.Models.Review>
 
 @{
-    ViewBag.Title = "Lista recenzji";
+    ViewBag.Title = "Index";
 }
 
-<h2>Lista recenzji</h2>
+<h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Stwórz nową recenzję", "Create")
+    @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table table-hover">
     <tr>
@@ -66,9 +66,9 @@
             }
         </td>
         <td>
-            @Html.ActionLink("Edycja", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Szczegóły", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Usuwanie", "Delete", new { id=item.ID })
+            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
+            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
         </td>
     </tr>
 }
