--- a/Konferencja/Views/Conferences/Delete.cshtml
+++ b/Konferencja/Views/Conferences/Delete.cshtml
@@ -33,7 +33,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Usuń" class="btn btn-warning" /> |
+            <input type="submit" value="Delete" class="btn btn-default" /> |
             @Html.ActionLink("Powrót do listy", "Index")
         </div>
     }
