--- a/Konferencja/Views/Publications/Edit.cshtml
+++ b/Konferencja/Views/Publications/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Konferencja.Models.Publication
 
 @{
-    ViewBag.Title = "Edycja publikacji";
+    ViewBag.Title = "Edycja";
 }
 
 <h2>Edytuj</h2>
@@ -58,16 +58,8 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Status, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Zapisz zmiany" class="btn btn-success" /> <input type="button" value="Dodaj recenzję" class="btn btn-default" onclick="location.href='@Url.Action("CreateForPublication", "Reviews", new { publicationID = Model.ID })'" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
