--- a/Konferencja/Views/Reviews/Create.cshtml
+++ b/Konferencja/Views/Reviews/Create.cshtml
@@ -1,18 +1,18 @@
 ﻿@model Konferencja.Models.Review
 
 @{
-    ViewBag.Title = "Tworzenie recenzji";
+    ViewBag.Title = "Create";
 }
 
-<h2>Stwórz recenzję</h2>
+<h2>Create</h2>
 
 
-@using (Html.BeginForm("Create", "Reviews", FormMethod.Post))
+@using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Recenzja</h4>
+        <h4>Review</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -26,8 +26,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", @placeholder = "Podsumowanie i uzasadnienie oceny" } })
-                @*@Html.TextArea("Description", "-----", new { @class="form-control text-box multi-line", @data_val="true", @data_val_length="Opis nie może być dłuższy niż 1000 znaków.", data_val_length_max="1000", data_val_required="Pole Opis jest wymagane.", id="Description"})*@
+                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -50,14 +49,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Stwórz" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Powrót do listy", "Index")
+    @Html.ActionLink("Back to List", "Index")
 </div>
 
 @section Scripts {
