--- a/Konferencja/Views/Reviews/Details.cshtml
+++ b/Konferencja/Views/Reviews/Details.cshtml
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Recenzja</h4>
+    <h4>Review</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -70,5 +70,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Powrót do listy", "Index")
+    @Html.ActionLink("Back to List", "Index")
 </p>
