--- a/Konferencja/Views/Reviews/ReviewersEdit.cshtml
+++ b/Konferencja/Views/Reviews/ReviewersEdit.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Recenzja</h4>
+        <h4>Review</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
@@ -45,7 +45,7 @@
 }
 
 <div>
-    @Html.ActionLink("Powrót do listy", "Index")
+    @Html.ActionLink("Back to List", "Index")
 </div>
 
 @section Scripts {
