Możliwe dodawanie recenzji przez formularz edycji publikacji

--- a/Konferencja/Views/Conferences/Create.cshtml
+++ b/Konferencja/Views/Conferences/Create.cshtml
@@ -7,10 +7,10 @@
 <h2>Stwórz</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Konferencja</h4>
         <hr />
@@ -33,7 +33,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Stwórz" class="btn btn-default" />
             </div>
         </div>
     </div>
