--- a/Konferencja/Views/Publications/Create.cshtml
+++ b/Konferencja/Views/Publications/Create.cshtml
@@ -1,16 +1,16 @@
 ﻿@model Konferencja.Models.Publication
 
 @{
-    ViewBag.Title = "Stwórz";
+    ViewBag.Title = "Stwórz publikację";
 }
 
 <h2>Stwórz</h2>
 
 
-@using (Html.BeginForm("Create", "Publications", FormMethod.Post)) 
+@using (Html.BeginForm("Create", "Publications", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Publikacja</h4>
         <hr />
@@ -49,7 +49,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Stwórz" class="btn btn-default" />
             </div>
         </div>
     </div>
