--- a/Konferencja/Views/Publications/Index.cshtml
+++ b/Konferencja/Views/Publications/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Konferencja.Models.Publication>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Lista";
 }
 
 <h2>Indeks</h2>
@@ -32,43 +32,44 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Conference.Theme)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ApplicationUser.FullName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.ActionLink("Pobierz", null, null, null, new { href = item.File })
-        </td>
-        <td>
-            @if (item.Status == Konferencja.Models.Status.Accepted)
-            {
-                <span class="label label-success">Akceptacja</span>
-            }
-            else if (item.Status == Konferencja.Models.Status.Rejected)
-            {
-                <span class="label label-warning">Odrzucenie</span>
-            }
-            else
-            {
-                <span class="label label-info">Oczekiwanie</span>
-            }
-        </td>
-        <td>
-            @Html.ActionLink("Edytuj", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Szczegóły", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Usuń", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Conference.Theme)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ApplicationUser.FullName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.ActionLink("Pobierz", null, null, null, new { href = item.File })
+            </td>
+            <td>
+                @if (item.Status == Konferencja.Models.Status.Accepted)
+                {
+                    <span class="label label-success">Akceptacja</span>
+                }
+                else if (item.Status == Konferencja.Models.Status.Rejected)
+                {
+                    <span class="label label-warning">Odrzucenie</span>
+                }
+                else
+                {
+                    <span class="label label-info">Oczekiwanie</span>
+                }
+            </td>
+            <td>
+                @Html.ActionLink("Edytuj", "Edit", new { id = item.ID }) |
+                @Html.ActionLink("Szczegóły", "Details", new { id = item.ID }) |
+                @Html.ActionLink("Usuń", "Delete", new { id = item.ID })
+            </td>
+        </tr>
+    }
 
 </table>
