--- a/Konferencja/Views/Reviews/Index.cshtml
+++ b/Konferencja/Views/Reviews/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<Konferencja.Models.Review>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Lista recenzji";
 }
 
-<h2>Index</h2>
+<h2>Lista recenzji</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Stwórz nową recenzję", "Create")
 </p>
 <table class="table table-hover">
     <tr>
@@ -26,59 +26,60 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Publication.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Publication.ApplicationUser.FullName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Reviewer.FullName)
-        </td>
-        <td>
-            @if (item.HasGrade)
-            {
-                switch (item.Grade)
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Publication.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Publication.ApplicationUser.FullName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Reviewer.FullName)
+            </td>
+            <td>
+                @if (item.HasGrade)
                 {
-                    case Konferencja.Models.Grade.A:
-                        <button type="button" class="btn btn-success btn-sm btn-round"><b>A</b></button>
-                        break;
-                    case Konferencja.Models.Grade.B:
-                        <button type="button" class="btn btn-success btn-sm btn-round"><b>B</b></button>
-                        break;
-                    case Konferencja.Models.Grade.C:
-                        <button type="button" class="btn btn-warning btn-sm btn-round"><b>C</b></button>
-                        break;
-                    case Konferencja.Models.Grade.D:
-                        <button type="button" class="btn btn-danger btn-sm btn-round"><b>D</b></button>
-                        break;
-                    case Konferencja.Models.Grade.F:
-                        <button type="button" class="btn btn-danger btn-sm btn-round"><b>E</b></button>
-                        break;
+                    switch (item.Grade)
+                    {
+                        case Konferencja.Models.Grade.A:
+                            <button type="button" class="btn btn-success btn-sm btn-round"><b>A</b></button>
+                            break;
+                        case Konferencja.Models.Grade.B:
+                            <button type="button" class="btn btn-success btn-sm btn-round"><b>B</b></button>
+                            break;
+                        case Konferencja.Models.Grade.C:
+                            <button type="button" class="btn btn-warning btn-sm btn-round"><b>C</b></button>
+                            break;
+                        case Konferencja.Models.Grade.D:
+                            <button type="button" class="btn btn-danger btn-sm btn-round"><b>D</b></button>
+                            break;
+                        case Konferencja.Models.Grade.F:
+                            <button type="button" class="btn btn-danger btn-sm btn-round"><b>E</b></button>
+                            break;
+                    }
                 }
-            }
-            else
-            {
-                @*@Html.DisplayFor(modelItem => item.Grade)*@
-                <button type="button" class="btn btn-default btn-sm btn-round" data-toggle="popover" data-placement="right" data-content="Publikacja w tej recenzji nie ma jeszcze wystawionej oceny."><b>?</b></button>
-            }
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
+                else
+                {
+                    @*@Html.DisplayFor(modelItem => item.Grade)*@
+                    <button type="button" class="btn btn-default btn-sm btn-round" data-toggle="popover" data-placement="right" data-content="Publikacja w tej recenzji nie ma jeszcze wystawionej oceny."><b>?</b></button>
+                }
+            </td>
+            <td>
+                @Html.ActionLink("Edycja", "Edit", new { id = item.ID }) |
+                @Html.ActionLink("Szczegóły", "Details", new { id = item.ID }) |
+                @Html.ActionLink("Usuwanie", "Delete", new { id = item.ID })
+            </td>
+        </tr>
+    }
 
 </table>
 @section scripts{
-<script>
+    <script>
 $(document).ready(function(){
     $('[data-toggle="popover"]').popover();
 });
-</script>
+    </script>
 }
 
