--- a/Konferencja/Views/Publications/Delete.cshtml
+++ b/Konferencja/Views/Publications/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Konferencja.Models.Publication
 
 @{
-    ViewBag.Title = "Usuń";
+    ViewBag.Title = "Usuwanie publikacji";
 }
 
 <h2>Usuń</h2>
 
-<h3>Czy napewno chcesz to usunąć?</h3>
+<h3>Czy napewno chcesz usunąć tę publikację?</h3>
 <div>
     <h4>Publikacja</h4>
     <hr />
