--- a/Konferencja/Views/Publications/Index.cshtml
+++ b/Konferencja/Views/Publications/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Konferencja.Models.Publication>
 
 @{
-    ViewBag.Title = "Lista";
+    ViewBag.Title = "Lista publikacji";
 }
 
-<h2>Indeks</h2>
+<h2>Lista publikacji</h2>
 
 <p>
     @Html.ActionLink("Stwórz nowy element", "Create")
