--- a/Konferencja/Views/Publications/Manage.cshtml
+++ b/Konferencja/Views/Publications/Manage.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Konferencja.Models.ManagePublicationsViewModel
 
 @{
-    ViewBag.Title = "Manage";
+    ViewBag.Title = "Zarządzanie publikacjami";
 }
 
 <h2>Zarządzaj publikacjami</h2>
