--- a/Konferencja/Views/Reviews/Delete.cshtml
+++ b/Konferencja/Views/Reviews/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Konferencja.Models.Review
 
 @{
-    ViewBag.Title = "Usuwanie ";
+    ViewBag.Title = "Usuwanie recenzji";
 }
 
 <h2>Usuń</h2>
 
-<h3>Jesteś pewien, że chcesz usunąć ten element?</h3>
+<h3>Jesteś pewien, że chcesz usunąć tę recenzję?</h3>
 <div>
     <h4>Recenzja</h4>
     <hr />
