--- a/Konferencja/Views/Reviewers/Delete.cshtml
+++ b/Konferencja/Views/Reviewers/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model Konferencja.Models.Reviewer
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Usuwanie recenzentów";
 }
 
-<h2>Delete</h2>
+<h2>Usuń</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Czy napewno chcesz usunąć tego recenzenta z bazy danych?</h3>
 <div>
-    <h4>Reviewer</h4>
+    <h4>Recenzent</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -73,8 +73,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Usuń" class="btn btn-warning" /> |
+            @Html.ActionLink("Powrót do listy", "Index")
         </div>
     }
 </div>
