--- a/Konferencja/Views/Reviews/Details.cshtml
+++ b/Konferencja/Views/Reviews/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Konferencja.Models.Review
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Szczegóły recenzji";
 }
 
-<h2>Details</h2>
+<h2>Szczegóły</h2>
 
 <div>
     <h4>Recenzja</h4>
@@ -69,6 +69,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Edytuj", "Edit", new { id = Model.ID }) |
     @Html.ActionLink("Powrót do listy", "Index")
 </p>
