--- a/Konferencja/Views/Publications/Edit.cshtml
+++ b/Konferencja/Views/Publications/Edit.cshtml
@@ -67,16 +67,20 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Zapisz zmiany" class="btn btn-success" /> <input type="button" value="Dodaj recenzję" class="btn btn-default" onclick="location.href='@Url.Action("CreateForPublication", "Reviews", new { publicationID = Model.ID })'" />
+                <input type="submit" value="Zapisz zmiany" class="btn btn-success" />
+                @if (Model.Status == Konferencja.Models.Status.NoAction)
+                {
+                    <input type="button" value="Dodaj recenzję" class="btn btn-default" onclick="location.href='@Url.Action("CreateForPublication", "Reviews", new { publicationID = Model.ID })'" />
+                }
+                </div>
             </div>
         </div>
-    </div>
-}
+                }
 
-<div>
-    @Html.ActionLink("Powrót do listy", "Index")
-</div>
+                <div>
+                    @Html.ActionLink("Powrót do listy", "Index")
+                </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+                @section Scripts {
+                    @Scripts.Render("~/bundles/jqueryval")
+                }
